# xenomai-libevl-fc37

./: .gitignore  LICENSE  README.md  meson-build-libevl.sh  meson.build  meson_options.txt
benchmarks/: hectic.c  latmus.c  meson.build
benchmarks/zephyr/: frdm_k64f-enable-EVL-latency-monitor.patch
benchmarks/zephyr/latmon/: CMakeLists.txt
benchmarks/zephyr/latmon/src/: main.c
include/: meson.build
include/evl/: atomic.h  clock-evl.h  compat.h  compiler.h  event.h  evl.h  flags.h  heap.h  list.h  mutex-evl.h  observable-evl.h  poll-evl.h  proxy-evl.h  ring_ptr.h  rwlock.h  sched-evl.h  sem.h  sys.h  syscall-evl.h  thread-evl.h  timer-evl.h  xbuf-evl.h
include/evl/net/: socket-evl.h
lib/: clock.c  event.c  flags.c  heap.c  init.c  internal.h  meson.build  mutex.c  observable.c  parse_vdso.c  parse_vdso.h  poll.c  proxy.c  rwlock.c  sched.c  sem.c  socket.c  sys.c  syscall.c  thread.c  timer.c  version.c  xbuf.c
lib/arch/arm/include/asm/evl/: vdso.h
lib/arch/arm64/include/asm/evl/: vdso.h
lib/arch/x86/include/asm/evl/: vdso.h
meson/: aarch64-none-linux-gnu  arm-none-linux-gnueabihf  generate-git-stamp.sh  post-install.sh  setup-uapi.sh
tests/: basic-xbuf.c  clock-timer-periodic.c  clone-fork-exec.c  detach-self.c  duplicate-element.c  element-visibility.c  eshi.list  evl-tests-backup.tar.xz  fault.c  filelist  fix-evl-syscall.sh  fix-evl-tests-includes.sh  fix-evl-timer.sh  fpu-preload.c  fpu-stress.c  heap-torture.c  helpers.c  helpers.h  mapfd.c  meson.build  monitor-deadlock.c  monitor-deboost-stress.c  monitor-event-targeted.c  monitor-event-untrack.c  monitor-event.c  monitor-flags-broadcast.c  monitor-flags-inband.c  monitor-flags.c  monitor-pi-deadlock.c  monitor-pi-deboost.c  monitor-pi-stress.c  monitor-pi.c  monitor-pp-dynamic.c  monitor-pp-lazy.c  monitor-pp-lower.c  monitor-pp-nested.c  monitor-pp-pi.c  monitor-pp-raise.c  monitor-pp-tryenter.c  monitor-pp-weak.c  (+39 more)
tests/compile-tests/: clock.cc  copy-compile-tests.sh  event.cc  flags.cc  heap.cc  init.cc  meson.build  mutex.cc  observable.cc  poll.cc  proxy.cc  rwlock.cc  sched.cc  sem.cc  socket.cc  thread.cc  timer.cc  xbuf.cc
tidbits/: meson.build  oob-net-icmp.c  oob-spi.c
utils/: evl-check.c  evl-gdb  evl-help  evl-ps.c  evl-start  evl-stop  evl-test  evl-trace  evl.c  kconf-checklist.evl  meson.build  trace.evl  trace.irq  trace.timer
